Brewyn | Espinal fixed form style on mobile 06-08-2024

--- a/frontend/src/pages/SingOut/Login/style.module.sass
+++ b/frontend/src/pages/SingOut/Login/style.module.sass
@@ -19,5 +19,9 @@
     padding: 10px 0
 
   @include mobile
+    &__container
+      margin-top: -37px
+      transform: scale(0.8)
+
     form
       width: 300px
